<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".academy.academy">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/RoyalBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeadingAcd"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/attendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Attendance"
        android:layout_marginStart="40dp"
        android:layout_marginTop="95dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/marks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Marks"
        android:layout_marginStart="40dp"
        android:layout_marginTop="165dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/timeTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TT"
        android:layout_marginStart="40dp"
        android:layout_marginTop="235dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/lecture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lecture"
        android:layout_marginStart="40dp"
        android:layout_marginTop="305dp"
        android:textAlignment="center" />

</FrameLayout>