<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReadAtGlance"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/lightBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeadingLeader"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Widget.AppCompat.ButtonBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/PCEAtGlancePic"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/leader"
                tools:srcCompat="@drawable/leader">

            </ImageView>

            <TextView
                android:id="@+id/WLToPCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LeaderName"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="21sp"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/WLToPCEDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Leader"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:layout_marginHorizontal="10dp"
                android:textSize="15sp"
                android:textColor="@color/black">
            </TextView>

        </LinearLayout>


    </ScrollView>

</LinearLayout>