<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateBlog">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/RoyalBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeadingCB"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/blogImage"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:contentDescription="@string/MapImage"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/addImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddImage"
            app:layout_constraintBottom_toTopOf="@+id/descriptionForBlog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blogImage">

        </com.google.android.material.button.MaterialButton>

        <EditText
            android:id="@+id/descriptionForBlog"
            android:layout_width="285dp"
            android:layout_height="255dp"
            android:autofillHints="@string/CBD"
            android:background="@drawable/border"
            android:gravity="top"
            android:hint="@string/CBD"
            android:inputType="none"
            app:layout_constraintBottom_toTopOf="@+id/displayb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addImage">

        </EditText>

        <RelativeLayout
            android:id="@+id/displayb"
            android:layout_width="236dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toTopOf="@+id/requestBlog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionForBlog">

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RequestBlog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/displayb">

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>