<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".blog.Blog">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/RoyalBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeadingBlog"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>

        <ImageView
            android:id="@+id/requestedBlog"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginStart="299dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/RequestedBlog"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/notify2"
            tools:srcCompat="@drawable/notify2">

        </ImageView>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10">

        </androidx.constraintlayout.widget.Guideline>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90">

        </androidx.constraintlayout.widget.Guideline>


        <Button
            android:id="@+id/createBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CreateBlog"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/g1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/WhatIsBlog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WIB"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/g2"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toEndOf="@+id/createBlog"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myBlogU"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="165dp">

    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>