<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnlineGrievances"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/lightBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeadingGF"
            android:textColor="@color/white"
            android:textSize="20sp">
        </TextView>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/userType"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="30dp">

            </Spinner>

            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/department"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:layout_marginVertical="0dp"
                android:layout_marginStart="30dp">

            </Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="30dp">

            </Spinner>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Email"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Mobile"
                    android:inputType="number"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Subject"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Description"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/incidence_Date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Incidence_Dat"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textSize="15sp"
                    android:textColor="@color/black">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/incidence_time"
                android:spinnerMode="dropdown"
                android:background="@android:drawable/btn_dropdown"
                android:gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_marginStart="30dp">

            </Spinner>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:text="@string/SubmitGF">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>



    </ScrollView>



</LinearLayout>